shared/src/test/data/yeast/invalid-json/scalar-in-map-entry.jyt
BeginDocument       0,  1,  0 ''
BeginMapping        0,  1,  0 '{'
LineBreak           1,  1,  1 '\n'
WhiteSpace          2,  2,  0 '  '
BeginScalar         4,  2,  2 ''
Indicator           4,  2,  2 '\"'
Text                5,  2,  3 'object'
Indicator          11,  2,  9 '\"'
EndScalar          12,  2, 10 ''
Indicator          12,  2, 10 ':'
WhiteSpace         13,  2, 11 ' '
BeginMapping       14,  2, 12 '{'
LineBreak          15,  2, 13 '\n'
WhiteSpace         16,  3,  0 '    '
BeginScalar        20,  3,  4 ''
Indicator          20,  3,  4 '\"'
Text               21,  3,  5 'name'
Indicator          25,  3,  9 '\"'
EndScalar          26,  3, 10 ''
Indicator          26,  3, 10 ':'
WhiteSpace         27,  3, 11 ' '
BeginScalar        28,  3, 12 ''
Indicator          28,  3, 12 '\"'
Text               29,  3, 13 'cristian'
Indicator          37,  3, 21 '\"'
EndScalar          38,  3, 22 ''
Indicator          38,  3, 22 ','
LineBreak          39,  3, 23 '\n'
WhiteSpace         40,  4,  0 '    '
BeginScalar        44,  4,  4 ''
Indicator          44,  4,  4 '\"'
Text               45,  4,  5 'surname'
Indicator          52,  4, 12 '\"'
EndScalar          53,  4, 13 ''
Indicator          53,  4, 13 ':'
WhiteSpace         54,  4, 14 ' '
BeginScalar        55,  4, 15 ''
Indicator          55,  4, 15 '\"'
Text               56,  4, 16 'pavon'
Indicator          61,  4, 21 '\"'
EndScalar          62,  4, 22 ''
Indicator          62,  4, 22 ','
LineBreak          63,  4, 23 '\n'
WhiteSpace         64,  5,  0 '    '
Error              68,  5,  4 '#an invalid json comment only to check the raw render'
Indicator         121,  5, 57 ','
LineBreak         122,  5, 58 '\n'
WhiteSpace        123,  6,  0 '    '
BeginScalar       127,  6,  4 ''
Indicator         127,  6,  4 '\"'
Text              128,  6,  5 'age'
Indicator         131,  6,  8 '\"'
EndScalar         132,  6,  9 ''
Indicator         132,  6,  9 ':'
WhiteSpace        133,  6, 10 ' '
BeginScalar       134,  6, 11 ''
Text              134,  6, 11 '22'
EndScalar         136,  6, 13 ''
LineBreak         136,  6, 13 '\n'
WhiteSpace        137,  7,  0 '  '
EndMapping        139,  7,  2 '}'
LineBreak         140,  7,  3 '\n'
EndMapping        141,  8,  0 '}'
